<resources>
    <string name="app_name">GPS Navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="gps_navigation">GPS Navigation</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="default_lat">00.000000</string>
    <string name="default_lng">00.000000</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="required_for_this_app">Required for this app</string>
    <string name="enable_now">Enable Now</string>
    <string name="location_permission_not_granted">Location Permission not granted</string>
    <string name="text_privacy_policy">These are the terms of Service and privacy policy of this app. This app provides you screen casting functionality. This privacy policy provices an overview of how we process personal data of our users. We will not share any of your personal information with anyone except as per stated in this privacy policy.
    \n\n
<b> Our Privacy Commitment</b>
        \n
        We respect your rights and your privacy. Your ability to make informed choices about the use of your information is important to us. We collect different types of information for various purposes to provide you with more improved services.
\n\n
 <b>Information We Collect</b>
        \n
 Permissions in this Application are the Following
    • Write External Storage
    • Read External Storage
\n\n
 <b>Changes to this Privacy Policy</b>
        \n
  	 We may change this privacy policy from time to time, by posting the most current privacy policy and its effective date. In case we change this privacy policy substantially, we may bring 	such changes to your attention by explicit notice in this page.
\n\n
 <b>Third-party links</b>
        \n
   We do not include or offer third-party products or services on our website.
\n\n
  <b>Children\'s Privacy</b>
        \n
    Our Service does not address anyone under the age of 18 (Children). We do not knowingly collect any personally identifiable information from anyone under the age of 18. If you are a parent/guardian and you are aware that your Children has provided us with Personal Data, please contact us. If we become aware that we have collected Personal Data from children without verification of parental consent, we take steps to remove that information from our servers.
\n\n
   <b>Contact Us</b>
        \n
    If you have any questions about this Privacy Policy, please contact us.
     \n\n

    </string>
    <string name="close">close</string>
    <string name="menu">Menu</string>
    <string name="famous_pl">Famous Pl</string>
    <string name="nearby">Nearby</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="islamabad">Islamabad</string>
    <string name="recent_search">Recent Search</string>
    <string name="clear_search">Clear Search</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoic2hhaHphZGtoYW4xMjMiLCJhIjoiY2sweG16eGtiMDdyMzNjbzE1eGg2cjV2biJ9.ru-Gf4mnyj7N_TV93QFX4Q</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="saved_map">Saved Map</string>
    <string name="share_my_location">Share My Location</string>
    <string name="delete">Delete</string>
    <string name="show_on_the_map">Show On Map</string>
    <string-array name="layer_spinner_array">
        <item>Water</item>
        <item>Building</item>
    </string-array>
    <string name="menu_map_style_streets">Streets</string>
    <string name="menu_map_style_dark">Dark</string>
    <string name="menu_map_style_light">Light</string>
    <string name="menu_map_style_outdoors">Outdoors</string>
    <string name="menu_map_style_satellite">Satellite</string>
    <string name="menu_map_style_satellite_streets">Satellite streets</string>
    <string name="move_map_instruction">Move map to place\nmarker at desired location</string>
    <string name="zoom_map_in_and_out_instruction">Zoom in and out to see cluster numbers change</string>
    <string name="tap_on_feature_box_instruction">Tap on bounding box</string>
    <string name="fragment_in_card_below">Map fragment container in card below</string>
    <string name="download_button_text">Download</string>
    <string name="list_button_text">List</string>
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="location_component_fragment_text">User\'s current location on a map fragment</string>
    <string name="new_location">New lat: %1$s New longitude: %2$s</string>
    <string name="settings_dialog_title">Settings</string>
    <string name="settings_dialog_positive_button_text">Save</string>
    <string name="settings_status_toast_settings_saved">Settings saved</string>
    <string name="settings_dialog_negative_button_text">Cancel</string>
    <string name="analytics_opt_out_textview">Opt out of analytics tracking</string>
    <string name="login_or_signup_account_switch_text">Always show account login/creation screen</string>
    <string name="log_out_of_account_button">Log out of Mapbox account</string>
    <string name="log_out_toast_confirm">Successfully logged out</string>
    <string name="basic_offline_deleted_toast">Yosemite offline map deleted</string>
    <string name="draw_marker_options_title">Hello World!</string>
    <string name="draw_marker_options_snippet">Welcome to my marker.</string>
    <string name="directions_activity_toast_message">Route is %1$f meters long.</string>
    <string name="snaking_directions_activity_error">Direction route retrieval failed</string>
    <string name="dialog_title">Name new region</string>
    <string name="dialog_message">Downloads the map region you currently are viewing</string>
    <string name="dialog_positive_button">Download</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="dialog_toast">Region name cannot be empty.</string>
    <string name="end_progress_success">Region downloaded successfully.</string>
    <string name="toast_no_regions_yet">You have no regions yet.</string>
    <string name="toast_region_deleted">Region deleted</string>
    <string name="navigate_positive_button">Navigate to</string>
    <string name="navigate_neutral_button_title">Delete</string>
    <string name="navigate_negative_button_title">Cancel</string>
    <string name="navigate_title">List</string>
    <string name="region_name">Region %1$d</string>
    <string name="set_region_name_hint">Enter name</string>
    <string name="simple_offline_end_progress_success">Region downloaded successfully.</string>
    <string name="feature_count_snackbar_feature_size">%1$d features in box</string>
    <string name="query_feature_marker_title">Properties:</string>
    <string name="query_feature_no_properties_found">No feature properties found</string>
    <string name="location_picker_select_location_button_cancel">Cancel</string>
    <string name="location_picker_select_location_button_select">Select a location</string>
    <string name="location_picker_dropped_marker_snippet_no_results">No results</string>
    <string name="location_picker_place_name_result">Place name: %1$s</string>
    <string name="fab_title_hotels">Hotels</string>
    <string name="fab_title_parks">Parks</string>
    <string name="fab_title_attractions">Attractions</string>
    <string name="language_switch_options_menu_language_english">English</string>
    <string name="language_switch_options_menu_language_french">French</string>
    <string name="language_switch_options_menu_language_russian">Russian</string>
    <string name="language_switch_options_menu_language_german">German</string>
    <string name="language_switch_options_menu_language_spanish">Spanish</string>
    <string name="language_switch_options_menu_language_italian">Italian</string>
    <string name="language_switch_options_menu_language_vietnamese">Vietnamese</string>
    <string name="language_switch_options_menu_language_korean">Korean</string>
    <string name="language_switch_options_menu_language_japanese">Japanese</string>
    <string name="language_switch_options_menu_language_simplified_chinese">Simplified Chinese</string>
    <string name="language_switch_options_menu_language_traditional_chinese">Traditional Chinese</string>
    <string name="tap_on_map_instruction">Tap anywhere on the map</string>
    <string name="tap_on_map_for_notification">Tap on map to get a notification with map image</string>
    <string name="san_francisco">San Francisco</string>
    <string name="los_angeles">Los Angeles</string>
    <string name="seattle">Seattle</string>
    <string name="new_orleans">New Orleans</string>
    <string name="chicago">Chicago</string>
    <string name="philadelphia">Philadelphia</string>
    <string name="new_york">New York</string>
    <string name="atlanta">Atlanta</string>
    <string name="portland">Portland</string>
    <string name="denver">Denver</string>
    <string name="minneapolis">Minneapolis</string>
    <string name="miami">Miami</string>
    <string name="extrusions_category">3D Extrusions</string>
    <string name="plugins_category">Plugins</string>
    <string name="tv_create_account_button">Create account</string>
    <string name="tv_sign_in_to_account_button">Sign in</string>
    <string name="landing_cta_tv_text">Create or sign in to your Mapbox account to view the latest Mapbox demos</string>
    <string name="skip_for_now_bottom_button">Skip for now</string>
    <string name="do_not_show_again_button_text">Don\'t ask again</string>
    <string name="whoops_error_dialog_title">Whoops!</string>
    <string name="whoops_error_dialog_message">Looks like something went wrong with the log in process! Please try clearing your browser\'s cache/cookies and then sign back in.</string>
    <string name="whoops_error_dialog_ok_positive_button">Ok</string>
    <string name="loading_textview">Loading&#8230;</string>
    <string name="space_station_toast">Zoom in closely on the space station\nto see it moving across the map</string>
    <string name="change_anchor">Change anchor</string>
    <string name="change_intensity">Change intensity</string>
    <string name="no_picture_in_picture_support">This device\'s Android version does not\nsupport picture-in-picture mode</string>
    <string name="retrieval_error_dialog_title">Whoops!</string>
    <string name="retrieval_error_dialog_message">Looks like something went wrong with the log in process! Please try clearing your browser\'s cache/cookies and then sign back in.</string>
    <string name="retrieval_error_dialog_ok_button">Ok</string>
    <string name="share_app_subject">Mapbox demo app for Android</string>
    <string name="share_app_text">Hey, check out these great examples showing what can be built using Mapbox:\n
    http://play.google.com/store/apps/details?id=com.mapbox.mapboxandroiddemo</string>
    <string name="share_app_choose_one_instruction">Share the app:</string>
    <string name="click_on_polygon_toast_instruction">Click anywhere within polygon FillLayer</string>
    <string name="click_on_polygon_toast">Clicked on FillLayer</string>
    <string name="rv_card_name">Location #%1$d</string>
    <string name="rv_card_bed_info">This location has %1$d beds</string>
    <string name="toast_instruction">Tap on cards below</string>
    <string name="rv_directions_route_card_name">Restaurant #%1$d</string>
    <string name="rv_directions_route_available_table_info">%1$d tables available</string>
    <string name="home">Home</string>
    <string name="famous_places_map">Famous Places Map</string>
    <string name="near_by_places_map">Near By Places Map</string>
</resources>