<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.codesk.gpsnavigation.ui.fragments.homefragment.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.codesk.gpsnavigation.ui.fragments.search.SearchBottomNavFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search_bottom_navigation" />

    <fragment
        android:id="@+id/navigation_nearby"
        android:name="com.codesk.gpsnavigation.ui.fragments.nearby.NearbyBottomNavFragment"
        android:label="@string/nearby"
        tools:layout="@layout/fragment_nearby_bottom_navigation" />

    <fragment
        android:id="@+id/navigation_famousplaces"
        android:name="com.codesk.gpsnavigation.ui.fragments.famousplaces.FamousPlacesBottomNavFragment"
        android:label="@string/famous_pl"
        tools:layout="@layout/fragment_famous_places_bottom_navigation" />

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.codesk.gpsnavigation.ui.fragments.menu.MenuBottomNavFragment"
        android:label="@string/menu"
        tools:layout="@layout/fragment_menu_bottom_navigation" />

    <fragment
        android:id="@+id/navigation_famous_places_detail"
        android:name="com.codesk.gpsnavigation.ui.fragments.famousplacesdetail.FamousPlacesDetailFragment"
        android:label="@string/menu"
        tools:layout="@layout/fragment_famous_places_detail" />
    <fragment
        android:id="@+id/navigation_saved_map"
        android:name="com.codesk.gpsnavigation.ui.fragments.savedmap.SavedMapFragment"
        android:label="@string/menu"
        tools:layout="@layout/fragment_saved_map" />

    <fragment
        android:id="@+id/navigation_nearby_place_detail"
        android:name="com.codesk.gpsnavigation.ui.fragments.nearbyplacesdetail.NearByPlacesDetailFragment"
        android:label="@string/menu"
        tools:layout="@layout/fragment_near_by_places_detail" />

    <fragment
        android:id="@+id/navigation_search_place_map"
        android:name="com.codesk.gpsnavigation.ui.fragments.searchplacemap.SearchPlaceMapFragment"
        android:label="@string/menu"
        tools:layout="@layout/fragment_search_place_map" />

    <fragment
        android:id="@+id/navigation_famousplaces_map"
        android:name="com.codesk.gpsnavigation.ui.fragments.famousplacesmap.FamousPlaceMapFragment"
        android:label="@string/famous_places_map"
        tools:layout="@layout/fragment_famous_place_map" />

    <fragment
        android:id="@+id/navigation_search_places_map"
        android:name="com.codesk.gpsnavigation.ui.fragments.searchplacesmap.SearchPlacesMapFragment"
        android:label="@string/famous_places_map"
        tools:layout="@layout/fragment_search_place_map" />

    <fragment
        android:id="@+id/navigation_nearby_places_map"
        android:name="com.codesk.gpsnavigation.ui.fragments.nearbyplacemap.NearByPlacesmapFragment"
        android:label="@string/near_by_places_map"
        tools:layout="@layout/fragment_near_by_placesmap" />
</navigation>