<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/outer_layout_famous_places_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.famousplacesdetail.FamousPlacesDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_layout_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/rv_famous_places_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/header_layout"
            layout="@layout/header_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_famous_places_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_layout_out"
        app:spanCount="2"
        tools:itemCount="8"
        tools:listitem="@layout/famos_places_item_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/overlay_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_less_opccity"
        android:visibility="invisible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_overlay_empty_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/bottom_overlay_data_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_overlay_data_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_nav_background"
            app:layout_constraintTop_toBottomOf="@+id/top_overlay_empty_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_20sdp"
                app:layout_constraintBottom_toTopOf="@+id/hozontalline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_saved_map"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/rounded_circel_white_fill"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/saved_map"
                    app:layout_constraintBottom_toTopOf="@+id/label_saved_map"
                    app:layout_constraintEnd_toStartOf="@+id/iv_share_my_location"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_saved_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/saved_map"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/iv_saved_map"
                    app:layout_constraintStart_toStartOf="@+id/iv_saved_map"
                    app:layout_constraintTop_toBottomOf="@+id/iv_saved_map" />


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_share_my_location"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/rounded_circel_white_fill"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/share_app"
                    app:layout_constraintBottom_toTopOf="@+id/label_share_my_location"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/iv_saved_map"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_share_my_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/share_my_location"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/iv_share_my_location"
                    app:layout_constraintStart_toStartOf="@+id/iv_share_my_location"
                    app:layout_constraintTop_toBottomOf="@+id/iv_share_my_location" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <View
                android:id="@+id/hozontalline"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:background="@color/white_too_low_opccity"
                app:layout_constraintBottom_toTopOf="@+id/overlay_bottom_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/overlay_bottom_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginVertical="@dimen/_10sdp"
                android:padding="@dimen/_10sdp"
                app:layout_constraintBottom_toTopOf="@+id/tv_version_name"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_rate_us"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/rounded_circel_white_fill"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/rate_us"

                    app:layout_constraintBottom_toTopOf="@+id/label_rate_us"
                    app:layout_constraintEnd_toStartOf="@+id/iv_share_app"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_rate_us"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/rate_us"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/iv_rate_us"
                    app:layout_constraintStart_toStartOf="@+id/iv_rate_us"
                    app:layout_constraintTop_toBottomOf="@+id/iv_rate_us" />


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_share_app"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:background="@drawable/rounded_circel_white_fill"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/share_app"
                    app:layout_constraintBottom_toTopOf="@+id/label_share_app"
                    app:layout_constraintEnd_toStartOf="@+id/iv_privacy_policy"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/iv_rate_us"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_share_app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/share_app"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/iv_share_app"
                    app:layout_constraintStart_toStartOf="@+id/iv_share_app"
                    app:layout_constraintTop_toBottomOf="@+id/iv_share_app" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_privacy_policy"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/rounded_circel_white_fill"
                    android:padding="@dimen/_8sdp"

                    android:src="@drawable/privacy_policy"
                    app:layout_constraintBottom_toTopOf="@+id/label_privacy_policy"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/iv_share_app"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_privacy_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/iv_privacy_policy"
                    app:layout_constraintStart_toStartOf="@+id/iv_privacy_policy"
                    app:layout_constraintTop_toBottomOf="@+id/iv_privacy_policy" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_version_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_20sdp"
                android:fontFamily="@font/roboto_medium"
                android:text="Version 0.0.1"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>